--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -27,7 +27,7 @@
     box-shadow: none;
   
     display: flex;
-    align-items:center;
+    align-items: center;
     justify-content: center;
   }
   .website-name:hover{
@@ -53,9 +53,13 @@
     }
   }
 
-  @media screen and (max-width: 736px) {
+  @media screen and (max-width: 900px) {
     .website-name {
-      font-size: 2rem;
+      font-size: 1.8rem;
+      padding: 0;
+      border-bottom-left-radius: 18%;
+      border-bottom-right-radius: 18%;
+      text-wrap: nowrap;
     }
   }
   
@@ -79,11 +83,9 @@
     text-align: center;
 
     border-radius: 10%;
-  }
-  
-  .banner h2 {
-    color: var(--accent);
-    font-size: 4.5rem;
+
+    color: var(--accent); 
+    font-size: 2rem;
   }
   
   .calc-space {
