--- a/assets/styles/topic.css
+++ b/assets/styles/topic.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
 
     text-align: center;
-
+    margin: 1rem;
 
 }
 
